# animaksmd

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
config/: zramdedup.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  ksm.rs  lib.rs  procfs.rs  psi.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: governor.rs  madvise.rs  main.rs  metrics.rs  scanner.rs
crates/swap-proxy/: Cargo.toml
crates/swap-proxy/src/: backend.rs  dedup.rs  fingerprint.rs  main.rs  ublk_frontend.rs
systemd/: animaksm.service  zramdedup-swap-proxy.service  zramdedup.service
