[workspace]
members = ["crates/common", "crates/daemon", "crates/swap-proxy"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald = "0.3"
nix = { version = "0.29", features = ["mman", "ptrace", "signal", "process", "fs", "uio", "poll"] }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "fs", "net", "time", "io-util", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
