[package]
name = "zramdedup-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
nix.workspace = true
libc.workspace = true
tokio.workspace = true
