[package]
name = "zramdedup-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zramdedup"
path = "src/main.rs"

[dependencies]
zramdedup-common = { path = "../common" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
tokio.workspace = true
clap.workspace = true
nix.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
